fixed nowrap text

--- a/css/skeleton.css
+++ b/css/skeleton.css
@@ -336,7 +336,8 @@ code {
 pre > code {
   display: block;
   padding: 1rem 1.5rem;
-  white-space: pre; }
+  white-space: pre;
+  word-wrap: break-word; }
 
 
 /* Tables
